--- a/templates/emails/booking_email.html
+++ b/templates/emails/booking_email.html
@@ -64,7 +64,7 @@
             <a href="mailto:{{ email }}" class="btn">Reply to Renter</a>
         </div>
         <div class="footer">
-            &copy; 2025 Flat Rental Website. All Rights Reserved.
+            &copy; 2025 EasyRent. All Rights Reserved.
         </div>
     </div>
 </body>
